feat(product) Update and delete