@@ -3,12 +3,10 @@ package com.fiap.techchallenge.adapter.out.persistence.product_category;
 import com.fiap.techchallenge.application.domain.model.ProductCategory;
 import com.fiap.techchallenge.application.port.out.product_category.CreateProductCategoryPort;
 import com.fiap.techchallenge.application.port.out.product_category.SearchProductCategoryPort;
+import java.util.List;
+import java.util.stream.StreamSupport;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
-
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 @RequiredArgsConstructor
 @Component
@@ -32,6 +30,6 @@ public class ProductCategoryPersistenceAdapter implements CreateProductCategoryP
     public List<ProductCategory> searchProductCategories() {
         return StreamSupport.stream(springDataRepository.findAll().spliterator(), false)
             .map(entityMapper::toDomainEntity)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
